# pluginUpdate_rust

./: README.md  agents.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/: 需求提示词文档.md
docs/需求/: 【查单任务】新增订单号查询功能.md  错误.md
scripts/: generate-icons.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.test.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
