[package]
name = "aichat-updater"
version = "0.1.0"
description = "aichat Plugin Updater"
authors = ["you"]
edition = "2021"

[lib]
name = "aichat_updater_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
zip = "2"
tempfile = "3"
dirs = "6"

